# VRaster

./: CMakeLists.txt  README.md
assets/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  testcube.glb
examples/: CMakeLists.txt
examples/simple-box/: main.cpp
examples/simple-stg/: main.cpp
include/: AudioManager.h  AudioManager.hpp  Game.hpp  GraphicsManager.hpp  GraphicsProvider.hpp  SysCustomizer.hpp  SysCustomizer_Vulkan.hpp  VRaster.hpp  utils.hpp  vk_impl_utils.hpp  vk_model.hpp  xr_linear.h  xr_linear_helper.h
src/: GraphicsManager_Vulkan.cpp  xr_process.cpp
src/test/: test_empty.cpp
